[tool.poetry]
name = "collector"
version = "0.1.0"
description = "ecommerce ingestion pipeline"
authors = ["Maaz <88334218+Morjzt@users.noreply.github.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"

[project]
name = "collector"
version = "0.1.0"
description = "ecommerce ingestion pipeline"
authors = [
    {name = "Maaz", email = "88334218+Morjzt@users.noreply.github.com"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.30.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.0",
    "redis>=5.0.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"